# solana-anchor-examples

./: .gitignore
anchor-counter/: Anchor.toml  README.md  tsconfig.json
anchor-counter/migrations/: deploy.ts
anchor-counter/programs/anchor-counter/: Cargo.toml
anchor-counter/programs/anchor-counter/src/: lib.rs
anchor-counter/programs/anchor-counter/tests/: counter_test.rs
anchor-counter/tests/: anchor-counter.ts
counter-interact/anchor_counter_interface/: Cargo.toml
counter-interact/anchor_counter_interface/src/: accounts.rs  instructions.rs
counter-interact/counter_client/: .gitignore  Cargo.toml  readme.md
counter-interact/counter_client/src/: main.rs
multi-function/client/: Cargo.toml  readme.md
multi-function/client/src/: main.rs
multi-function/contract/: Anchor.toml  README.md  package.json
multi-function/contract/programs/multi-function/: Cargo.toml
multi-function/contract/programs/multi-function/src/: lib.rs
multi-function/contract/programs/multi-function/tests/: multi_function_test.rs
multi-function/contract/tests/: multi-function.ts
