[package]
name = "anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
ahash = "0.8.11"
anchor-lang = "0.30.1"
hashbrown = "0.14.5"
solana-program = "1.18.15"
time = "0.3.36"

[dev-dependencies]
solana-program-test = "1.18.15"
solana-sdk = "1.18.15"
anyhow = "1.0.86"
